# 3400FinalProj

./: .gitignore  3400FinalProj_GitHub.url  CMakeLists.txt  README.md
Design/: Design_1.cpp
docs/: Design Overview.docx  ProjectDescription_.docx  设计概要.docx
src/: ConnectMySQL.cpp  Doctor.cpp  HospitalBranch.cpp  HospitalDB.session.sql  HospitalSystem.cpp  MedicalStaff.cpp  Nurse.cpp  Patient.cpp  Pharmacy.cpp  main.cpp
src/header/: ConnectMySQL.h  Doctor.h  HospitalBranch.h  HospitalSystem.h  MedicalStaff.h  Nurse.h  Patient.h  Pharmacy.h
test/ConnectMySQL/: ConnectMySQL.cpp  ConnectMySQLTest.cpp  HospitalDB.session.sql
test/ConnectMySQL/header/: ConnectMySQL.h
test/Doctor/: Doctor.cpp  DoctorTest.cpp
test/Doctor/header/: Doctor.h
test/HospitalBranch/: HospitalBranch.cpp  HospitalBranchTest.cpp
test/HospitalBranch/header/: HospitalBranch.h
test/HospitalSystem/: HospitalSystem.cpp  HospitalSystemTest.cpp
test/HospitalSystem/header/: HospitalSystem.h
test/HospitalUI/: adddoctorwindow.cpp  assigndoctorwindow.cpp  dailyreportwindow.cpp  dailyreportwindow.h  financialreportwindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  purchasemedicationwindow.cpp  purchasemedicationwindow.h  registerpatientwindow.cpp  transferpatientwindow.cpp  transferpatientwindow.h  updateconditionwindow.cpp  updateconditionwindow.h
test/HospitalUI/header/: adddoctorwindow.h  assigndoctorwindow.h  dailyreportwindow.h  financialreportwindow.h  mainwindow.h  purchasemedicationwindow.h  registerpatientwindow.h  transferpatientwindow.h  updateconditionwindow.h
test/HospitalUI/mysql-connector-c++-9.2.0-macos15-arm64/: INFO_BIN
test/MedicalStaff/: MedicalStaff.cpp  MedicalStaffTest.cpp
test/MedicalStaff/header/: MedicalStaff.h
test/Nurse/: Nurse.cpp  NurseTest.cpp
test/Nurse/header/: Nurse.h
test/Patient/: Patient.cpp  PatientTest.cpp
test/Patient/header/: Patient.h
test/Pharmacy/: Pharmacy.cpp  PharmacyTest.cpp
test/Pharmacy/header/: Pharmacy.h
